fixed code layout for readability

--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,11 @@
+/*fit picture in sidebar*/
+
+#under{
+    width: 50px;
+    height: 50px;
+}
+
+/*header formats*/
 h2, h3, h4{
     font-weight: normal;
     cursor: default;
@@ -18,6 +26,7 @@ h3:hover, h4:hover{
 h4{
     font-size: small;
 }
+
 /*
 backend implement later
 
@@ -33,6 +42,7 @@ input[type=text], select, textarea{
 }
 */
 
+/*submit button customization*/
 input[type=submit]{
     margin-left: 38%;
     margin-top: 30px;
@@ -51,6 +61,7 @@ input[type=submit]:hover{
     transition: 0.3s;
 }
 
+/*change position of footer*/
 footer{
     margin-top: 50px;
 }
